{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 67,
  "lineage": "ae571e8d-f25a-3828-ead1-71fd89395abe",
  "resources": [
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c7a4b4f234dfa77",
            "arn": "arn:aws:ec2:eu-west-1:595658221962:instance/i-038b5e80ec025f277",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sin-final-project-primary-ec2-profile",
            "id": "i-038b5e80ec025f277",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sin-final-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07dd52c34b758e2ef",
            "private_dns": "ip-10-0-1-194.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-52-210-244-222.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.244.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "DRPattern": "warm-standby",
                  "ManagedBy": "terraform",
                  "Project": "sin-final-project"
                },
                "tags_all": {
                  "DRPattern": "warm-standby",
                  "ManagedBy": "terraform",
                  "Project": "sin-final-project"
                },
                "throughput": 125,
                "volume_id": "vol-049f56f71fcb1bad1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dea8be0d6827350",
            "tags": {
              "Environment": "primary",
              "Name": "sin-final-project-primary-app"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "Environment": "primary",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-app",
              "Project": "sin-final-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0c7acb85ec7257e10"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_iam_instance_profile.ec2",
            "module.primary.aws_iam_role.ec2",
            "module.primary.aws_security_group.alb",
            "module.primary.aws_security_group.app",
            "module.primary.aws_sqs_queue.dlq",
            "module.primary.aws_sqs_queue.orders",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available",
            "module.primary.data.aws_region.current",
            "module.primary.data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:internet-gateway/igw-01b1cddd397c68101",
            "id": "igw-01b1cddd397c68101",
            "owner_id": "595658221962",
            "tags": {
              "Name": "sin-final-project-primary-igw"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-igw",
              "Project": "sin-final-project"
            },
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:loadbalancer/app/sin-final-project-primary-alb/1aba5d87b6b6462e",
            "arn_suffix": "app/sin-final-project-primary-alb/1aba5d87b6b6462e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sin-final-project-primary-alb-786822385.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:loadbalancer/app/sin-final-project-primary-alb/1aba5d87b6b6462e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sin-final-project-primary-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05bcb61605130416b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02dea8be0d6827350"
              },
              {
                "subnet_id": "subnet-0b513d3e9ab5f6bfd"
              }
            ],
            "subnets": [
              "subnet-02dea8be0d6827350",
              "subnet-0b513d3e9ab5f6bfd"
            ],
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "vpc_id": "vpc-0d6bf6ad547b0ddd4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_security_group.alb",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:listener/app/sin-final-project-primary-alb/1aba5d87b6b6462e/4052e51f4f2416ae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-catalo/70064ec433bfd30a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:listener/app/sin-final-project-primary-alb/1aba5d87b6b6462e/4052e51f4f2416ae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:loadbalancer/app/sin-final-project-primary-alb/1aba5d87b6b6462e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_lb.app",
            "module.primary.aws_lb_target_group.catalog",
            "module.primary.aws_security_group.alb",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-orders/51b3bb41f289c45a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:listener-rule/app/sin-final-project-primary-alb/1aba5d87b6b6462e/4052e51f4f2416ae/195968579e3448af",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/orders",
                      "/orders/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:listener-rule/app/sin-final-project-primary-alb/1aba5d87b6b6462e/4052e51f4f2416ae/195968579e3448af",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:listener/app/sin-final-project-primary-alb/1aba5d87b6b6462e/4052e51f4f2416ae",
            "priority": 10,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_lb.app",
            "module.primary.aws_lb_listener.http",
            "module.primary.aws_lb_target_group.catalog",
            "module.primary.aws_lb_target_group.orders",
            "module.primary.aws_security_group.alb",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "catalog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-catalo/70064ec433bfd30a",
            "arn_suffix": "targetgroup/sin-final-project-primary-catalo/70064ec433bfd30a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-catalo/70064ec433bfd30a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:595658221962:loadbalancer/app/sin-final-project-primary-alb/1aba5d87b6b6462e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sin-final-project-primary-catalo",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-orders/51b3bb41f289c45a",
            "arn_suffix": "targetgroup/sin-final-project-primary-orders/51b3bb41f289c45a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-orders/51b3bb41f289c45a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:595658221962:loadbalancer/app/sin-final-project-primary-alb/1aba5d87b6b6462e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sin-final-project-primary-orders",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "catalog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-catalo/70064ec433bfd30a-20260725170308162200000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-catalo/70064ec433bfd30a",
            "target_id": "i-038b5e80ec025f277"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_iam_instance_profile.ec2",
            "module.primary.aws_iam_role.ec2",
            "module.primary.aws_instance.app",
            "module.primary.aws_lb_target_group.catalog",
            "module.primary.aws_security_group.alb",
            "module.primary.aws_security_group.app",
            "module.primary.aws_sqs_queue.dlq",
            "module.primary.aws_sqs_queue.orders",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available",
            "module.primary.data.aws_region.current",
            "module.primary.data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-orders/51b3bb41f289c45a-20260725170307957300000004",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:595658221962:targetgroup/sin-final-project-primary-orders/51b3bb41f289c45a",
            "target_id": "i-038b5e80ec025f277"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_iam_instance_profile.ec2",
            "module.primary.aws_iam_role.ec2",
            "module.primary.aws_instance.app",
            "module.primary.aws_lb_target_group.orders",
            "module.primary.aws_security_group.alb",
            "module.primary.aws_security_group.app",
            "module.primary.aws_sqs_queue.dlq",
            "module.primary.aws_sqs_queue.orders",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available",
            "module.primary.data.aws_region.current",
            "module.primary.data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:route-table/rtb-05b197289ae3e3dca",
            "id": "rtb-05b197289ae3e3dca",
            "owner_id": "595658221962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b1cddd397c68101",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sin-final-project-primary-public-rt"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-public-rt",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_internet_gateway.this",
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09db258f763ff2a49",
            "route_table_id": "rtb-05b197289ae3e3dca",
            "subnet_id": "subnet-02dea8be0d6827350"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_internet_gateway.this",
            "module.primary.aws_route_table.public",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af5deb2bf96ca370",
            "route_table_id": "rtb-05b197289ae3e3dca",
            "subnet_id": "subnet-0b513d3e9ab5f6bfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_internet_gateway.this",
            "module.primary.aws_route_table.public",
            "module.primary.aws_subnet.public",
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:security-group/sg-05bcb61605130416b",
            "description": "Public HTTP ingress for the regional ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bcb61605130416b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sin-final-project-primary-alb-sg",
            "name_prefix": "",
            "owner_id": "595658221962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:security-group/sg-0c7acb85ec7257e10",
            "description": "Application traffic from ALB and restricted SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7acb85ec7257e10",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.246.99.185/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bcb61605130416b"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "sin-final-project-primary-app-sg",
            "name_prefix": "",
            "owner_id": "595658221962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_security_group.alb",
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:security-group/sg-0b8d3e0cd5e478f59",
            "description": "PostgreSQL only from app instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8d3e0cd5e478f59",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7acb85ec7257e10"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sin-final-project-primary-db-sg",
            "name_prefix": "",
            "owner_id": "595658221962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_security_group.alb",
            "module.primary.aws_security_group.app",
            "module.primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:subnet/subnet-0aff77e62da6b83b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aff77e62da6b83b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-primary-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-private-1",
              "Project": "sin-final-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:subnet/subnet-011d590968d17a798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011d590968d17a798",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-primary-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-private-2",
              "Project": "sin-final-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:subnet/subnet-02dea8be0d6827350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dea8be0d6827350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-primary-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-public-1",
              "Project": "sin-final-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:subnet/subnet-0b513d3e9ab5f6bfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b513d3e9ab5f6bfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-primary-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-public-2",
              "Project": "sin-final-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d6bf6ad547b0ddd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary.aws_vpc.this",
            "module.primary.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:595658221962:vpc/vpc-0d6bf6ad547b0ddd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c2bb55c96f2a544",
            "default_route_table_id": "rtb-081ba77ab4d2ec7b5",
            "default_security_group_id": "sg-0437291dab40b2746",
            "dhcp_options_id": "dopt-009f1137944159e33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6bf6ad547b0ddd4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081ba77ab4d2ec7b5",
            "owner_id": "595658221962",
            "tags": {
              "Environment": "primary",
              "Name": "sin-final-project-primary-vpc"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "Environment": "primary",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-primary-vpc",
              "Project": "sin-final-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bc554a9635a77c8",
            "arn": "arn:aws:ec2:eu-central-1:595658221962:instance/i-0ace7290fdb2a0024",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sin-final-project-standby-ec2-profile",
            "id": "i-0ace7290fdb2a0024",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sin-final-project-key-standby",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e15c5f7605943f38",
            "private_dns": "ip-10-1-1-132.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.132",
            "public_dns": "ec2-3-120-151-206.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.151.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "DRPattern": "warm-standby",
                  "ManagedBy": "terraform",
                  "Project": "sin-final-project"
                },
                "tags_all": {
                  "DRPattern": "warm-standby",
                  "ManagedBy": "terraform",
                  "Project": "sin-final-project"
                },
                "throughput": 125,
                "volume_id": "vol-07ea27552db762525",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08363f58b64b3993c",
            "tags": {
              "Environment": "standby",
              "Name": "sin-final-project-standby-app"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "Environment": "standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-app",
              "Project": "sin-final-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0557da3c0136004ae"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_iam_instance_profile.ec2",
            "module.standby.aws_iam_role.ec2",
            "module.standby.aws_security_group.alb",
            "module.standby.aws_security_group.app",
            "module.standby.aws_sqs_queue.dlq",
            "module.standby.aws_sqs_queue.orders",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available",
            "module.standby.data.aws_region.current",
            "module.standby.data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:internet-gateway/igw-0dc4347d4e6fd07f0",
            "id": "igw-0dc4347d4e6fd07f0",
            "owner_id": "595658221962",
            "tags": {
              "Name": "sin-final-project-standby-igw"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-igw",
              "Project": "sin-final-project"
            },
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:loadbalancer/app/sin-final-project-standby-alb/30ba5d90896bc677",
            "arn_suffix": "app/sin-final-project-standby-alb/30ba5d90896bc677",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sin-final-project-standby-alb-1120867931.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:loadbalancer/app/sin-final-project-standby-alb/30ba5d90896bc677",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sin-final-project-standby-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0177dffe939c45da9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08363f58b64b3993c"
              },
              {
                "subnet_id": "subnet-08f65e101a7c582c2"
              }
            ],
            "subnets": [
              "subnet-08363f58b64b3993c",
              "subnet-08f65e101a7c582c2"
            ],
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "vpc_id": "vpc-089e45ef06db3b670",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_security_group.alb",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:listener/app/sin-final-project-standby-alb/30ba5d90896bc677/68a5513b77b15e9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-catalo/b4765f1e5fcbcde3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:listener/app/sin-final-project-standby-alb/30ba5d90896bc677/68a5513b77b15e9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:loadbalancer/app/sin-final-project-standby-alb/30ba5d90896bc677",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_lb.app",
            "module.standby.aws_lb_target_group.catalog",
            "module.standby.aws_security_group.alb",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-orders/41cffc74e715b3ed",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:listener-rule/app/sin-final-project-standby-alb/30ba5d90896bc677/68a5513b77b15e9b/c86cd07ecf7347a2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/orders",
                      "/orders/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:listener-rule/app/sin-final-project-standby-alb/30ba5d90896bc677/68a5513b77b15e9b/c86cd07ecf7347a2",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:listener/app/sin-final-project-standby-alb/30ba5d90896bc677/68a5513b77b15e9b",
            "priority": 10,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_lb.app",
            "module.standby.aws_lb_listener.http",
            "module.standby.aws_lb_target_group.catalog",
            "module.standby.aws_lb_target_group.orders",
            "module.standby.aws_security_group.alb",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "catalog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-catalo/b4765f1e5fcbcde3",
            "arn_suffix": "targetgroup/sin-final-project-standby-catalo/b4765f1e5fcbcde3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-catalo/b4765f1e5fcbcde3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:595658221962:loadbalancer/app/sin-final-project-standby-alb/30ba5d90896bc677"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sin-final-project-standby-catalo",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-orders/41cffc74e715b3ed",
            "arn_suffix": "targetgroup/sin-final-project-standby-orders/41cffc74e715b3ed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-orders/41cffc74e715b3ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:595658221962:loadbalancer/app/sin-final-project-standby-alb/30ba5d90896bc677"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sin-final-project-standby-orders",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "catalog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-catalo/b4765f1e5fcbcde3-20260725170307957300000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-catalo/b4765f1e5fcbcde3",
            "target_id": "i-0ace7290fdb2a0024"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_iam_instance_profile.ec2",
            "module.standby.aws_iam_role.ec2",
            "module.standby.aws_instance.app",
            "module.standby.aws_lb_target_group.catalog",
            "module.standby.aws_security_group.alb",
            "module.standby.aws_security_group.app",
            "module.standby.aws_sqs_queue.dlq",
            "module.standby.aws_sqs_queue.orders",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available",
            "module.standby.data.aws_region.current",
            "module.standby.data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-orders/41cffc74e715b3ed-20260725170307957300000005",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:595658221962:targetgroup/sin-final-project-standby-orders/41cffc74e715b3ed",
            "target_id": "i-0ace7290fdb2a0024"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_iam_instance_profile.ec2",
            "module.standby.aws_iam_role.ec2",
            "module.standby.aws_instance.app",
            "module.standby.aws_lb_target_group.orders",
            "module.standby.aws_security_group.alb",
            "module.standby.aws_security_group.app",
            "module.standby.aws_sqs_queue.dlq",
            "module.standby.aws_sqs_queue.orders",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available",
            "module.standby.data.aws_region.current",
            "module.standby.data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:route-table/rtb-0f4dc9995278141df",
            "id": "rtb-0f4dc9995278141df",
            "owner_id": "595658221962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc4347d4e6fd07f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sin-final-project-standby-public-rt"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-public-rt",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_internet_gateway.this",
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033216b00352e15a2",
            "route_table_id": "rtb-0f4dc9995278141df",
            "subnet_id": "subnet-08363f58b64b3993c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_internet_gateway.this",
            "module.standby.aws_route_table.public",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d63826151f33e2b",
            "route_table_id": "rtb-0f4dc9995278141df",
            "subnet_id": "subnet-08f65e101a7c582c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_internet_gateway.this",
            "module.standby.aws_route_table.public",
            "module.standby.aws_subnet.public",
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:security-group/sg-0177dffe939c45da9",
            "description": "Public HTTP ingress for the regional ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0177dffe939c45da9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sin-final-project-standby-alb-sg",
            "name_prefix": "",
            "owner_id": "595658221962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:security-group/sg-0557da3c0136004ae",
            "description": "Application traffic from ALB and restricted SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0557da3c0136004ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.246.99.185/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0177dffe939c45da9"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "sin-final-project-standby-app-sg",
            "name_prefix": "",
            "owner_id": "595658221962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_security_group.alb",
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:security-group/sg-0e00f9e6fd7c7cf77",
            "description": "PostgreSQL only from app instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e00f9e6fd7c7cf77",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0557da3c0136004ae"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sin-final-project-standby-db-sg",
            "name_prefix": "",
            "owner_id": "595658221962",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Project": "sin-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_security_group.alb",
            "module.standby.aws_security_group.app",
            "module.standby.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:subnet/subnet-01b7e8e35b87498de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b7e8e35b87498de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-standby-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-private-1",
              "Project": "sin-final-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:subnet/subnet-048d09d509e6e0a0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d09d509e6e0a0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-standby-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-private-2",
              "Project": "sin-final-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:subnet/subnet-08363f58b64b3993c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08363f58b64b3993c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-standby-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-public-1",
              "Project": "sin-final-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:subnet/subnet-08f65e101a7c582c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f65e101a7c582c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595658221962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sin-final-project-standby-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-public-2",
              "Project": "sin-final-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-089e45ef06db3b670"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.standby.aws_vpc.this",
            "module.standby.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.standby",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].standby",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:595658221962:vpc/vpc-089e45ef06db3b670",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bf4b157a25c9547d",
            "default_route_table_id": "rtb-0723ad70f18f3b413",
            "default_security_group_id": "sg-0c89c61aa383d1761",
            "dhcp_options_id": "dopt-077f525b327249407",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089e45ef06db3b670",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0723ad70f18f3b413",
            "owner_id": "595658221962",
            "tags": {
              "Environment": "standby",
              "Name": "sin-final-project-standby-vpc"
            },
            "tags_all": {
              "DRPattern": "warm-standby",
              "Environment": "standby",
              "ManagedBy": "terraform",
              "Name": "sin-final-project-standby-vpc",
              "Project": "sin-final-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}